--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Electricity flows through generator</title>
+        <title>Electricity flows through generators.</title>
     </head>
     <body>
 
